--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "pretty-quick": "^4.0.0",
     "vite-plugin-svg-sprite": "^0.5.2",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "vue3-perfect-scrollbar": "^2.0.0"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.7.2",
